# pytest-report-plus

./: .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  playwright_report.html  playwright_report.json  pyproject.toml  pytest.ini  setup.py  template.html  test_basic_report.py  test_flaky_detection.py
.github/workflows/: actions-test.yml  unit-test-windows.yml  unit-test.yml
docs/: conf.py  contributing.rst  index.rst  installation.rst  usage.rst
docs/Examples/: Flaky.rst  ci_examples.rst  markers.rst  outputs.rst  tracibility.rst
docs/Features/: report-metadata.rst  search.rst
docs/cli/: cli.rst  execution-metadata.rst  generate-xml.rst  html-output.rst  json-report.rst  screenshots.rst  send-email.rst  should-open-report.rst
docs/extensions/vscode/: usage.rst
docs/marketplace/: usage.rst
pytest_html_plus/: compute_filter_counts.py  compute_git_branch.py  compute_report_metadata.py  extract_link.py  generate_html_report.py  json_merge.py  json_to_xml_converter.py  plugin.py  resolver_driver.py  send_email_report.py  utils.py
pytest_json_reporter/: generate_flakytest_report.py  generate_html_report.py  json_merge.py  plugin.py  reporter.py  send_email_report.py
pytest_reporter_plus/: compute_filter_counts.py  extract_link.py  generate_env_report.py  generate_html_report.py  json_merge.py  json_to_xml_converter.py  plugin.py  resolver_driver.py  send_email_report.py
report_output/: report.html
test_final/: report.html
test_fix/: report.html
test_report/: report.html
test_trace_fix/: report.html
tests/: conftest.py  initial_tests.py  playwright_initial_test.py  selenium_initial_test.py  test_initial_tests.py
tests/browser/: test_playwright.py  test_selenium.py
tests/dummy_tests/: test_cases.py
tests/e2e/: test_email.py  test_plugin.py  test_screenshots.py
tests/unit/: test_convert_json_to_junit_xml.py  test_copy_all_screenshots.py  test_driver_screenshots.py  test_error_block.py  test_find_screenshot_and_copy.py  test_flaky_badge.py  test_json_merger.py  test_mark_flaky_tests.py  test_marker_links.py  test_plugin_logging.py  test_setup_failure.py  test_trace_block.py
