[tool.poetry]
name = "pytest-reporter-plus"
version = "0.3.3"
description = "Lightweight enhanced HTML reporter for Pytest"
readme = "README.md"
authors = ["Emjey", "Karan"]
license = "MIT"
packages = [{ include = "pytest_reporter_plus" }]
keywords = [
    "pytest",
    "html-report",
    "pytest-plugin",
    "test-report",
    "test-results",
    "test-summary",
    "reporting",
    "python-testing",
    "automated-testing",
    "test-runner",
    "report-generator",
    "continuous-integration",
    "ci-cd",
    "pytest-html",
    "pytest-report"
]

urls.Homepage = "https://github.com/reporterplus/pytest-report-plus"
urls.Source = "https://github.com/reporterplus/pytest-report-plus"
urls.Tracker = "https://github.com/reporterplus/pytest-report-plus/issues"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
yagmail = ">=0.15.293,<0.16.0"
keyring = ">=25.6.0,<26.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
playwright = "^1.53.0"
pytest-playwright = "^0.7.0"
pytest-xdist = "^3.8.0"

[tool.poetry.group.dev.dependencies]
pytest-rerunfailures = "^15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."pytest11"]
pytest_reporter_plus = "pytest_reporter_plus.plugin"


