[tool.poetry]
name = "pytest-html-plus"
version = "0.4.6"
description = "Generate Actionable, automatic screenshots, unified Pytest HTML report in less than 3 seconds — no hooks, merge plugins, no config, xdist-ready."
readme = "README.md"
authors = ["reporterplus"]
license = "MIT"
packages = [{ include = "pytest_html_plus" }]
keywords = [
    "pytest",
    "pytest-html-plus",
    "pytest-plugin",
    "html-test-report",
    "beautiful-test-report",
    "shareable-test-results",
    "test-report",
    "test-results",
    "unit-test-report",
    "functional-test-report",
    "test-summary",
    "reporting",
    "python-testing",
    "automated-testing",
    "test-runner",
    "report-generator",
    "continuous-integration",
    "ci-cd",
    "github-actions",
    "jenkins",
    "pytest-html",
    "pytest-report"
]

urls.Homepage = "https://github.com/reporterplus/pytest-html-plus"
urls.Source = "https://github.com/reporterplus/pytest-html-plus"
urls.Tracker = "https://github.com/reporterplus/pytest-html-plus/issues"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
yagmail = ">=0.15.293,<0.16.0"
keyring = ">=25.6.0,<26.0.0"

[tool.poetry.group.dev.dependencies]
pytest-rerunfailures = "^15.1"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
playwright = "^1.53.0"
pytest-playwright = "^0.7.0"
pytest-xdist = "^3.8.0"
selenium = "^4.8.0"
webdriver-manager = "^3.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."pytest11"]
pytest_html_plus = "pytest_html_plus.plugin"


